<resources>
    <string name="app_name">BCycle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BCycle</string>
    <string name="nav_header_subtitle">BCycle</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">E-mail address</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">LOG IN</string>
    <string name="action_register">REGISTER</string>
    <string name="welcome">"Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_info">You must log in to use the app.</string>
    <string name="no_account_info">Don’t have an account?</string>
    <string name="register_info">Type in your data to create an account.</string>
    <string name="prompt_name">Your Name</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="privacy_policy_info">I accept the Terms of Service and the Privacy Policy.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_a_photo_info">Add a photo from:</string>
    <string name="empty_edit_text">empty!</string>
    <string name="different_password">different password</string>
    <string name="failed_to_sign_in">Failed to sign in: %1$s</string>
    <string name="failed_to_register">Failed to register: %1$s</string>
    <string name="failed_to_request_new_password">Failed to request new password: %1$s</string>
    <string name="new_avatar_info">New avatar</string>
    <string name="camera_source_info">From the camera</string>
    <string name="permission_denied_info">Permission denied…</string>
    <string name="too_short_password_message">Password should be at least 6 characters!</string>
    <string name="register_success_message">You have been registered successfully</string>
    <string name="emial_exists_message">The email address is already in use by another account.</string>
    <string name="badly_formated_email_message">The email address is badly formatted.</string>
    <string name="different_password_message">different password</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="distance_placeholder">0.00 km</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="time_placeholder">00:00:00</string>
    <string name="notification_channel_ongoing_name">Ongoing Trip</string>
    <string name="notification_channel_ongoing_description">Notification about the ongoing trip.</string>
    <string name="notification_ongoing_title">Trip in progress</string>
    <string name="distance_format">%1$.2f km</string>
    <string name="location_permission_title">Location permission required</string>
    <string name="location_permission_message">In order to track your trips, BCycle requires access to your location.</string>
    <string name="camera_storage_permission_title">Camera &amp; Storage permissions required</string>
    <string name="camera_storage_permission_message">In order to take photos during trips, BCycle needs access to your Camera and Storage. BCycle will not read any other files on your device.</string>
    <string name="uploading_trip">Saving your trip, please wait…</string>
    <string name="upload_try_again">Try again</string>
    <string name="uploading_error_title">Failed to save trip</string>
    <string name="uploading_error_title_photos">Failed to save trip photos</string>
    <string name="uploading_error_generic">Could not upload your trip. Check your Internet connectivity and try again.</string>
    <string name="token_update_failed">Cannot access your account. Check your Internet connectivity and try logging in again.</string>
    <string name="start_trip">Start Trip</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="resetPasswordMessage">Enter your email to get a message \n with a link to reset your password.</string>
    <string name="email_sent_message">Please check your email account, if you want to reset your password!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_create_group_trip">Create group trip</string>
    <string name="menu_join_group_trip">Join group trip</string>
    <string name="next_button">Next</string>
    <string name="trip_name">Trip name</string>
    <string name="description">Description</string>
    <string name="draw_the_route_of_your_trip">Draw the route of your trip</string>
    <string name="form_not_filled_info">Text fields cannot be empty</string>
    <string name="choose_start_datetime">Choose the \n start date</string>
    <string name="choose_finish_datetime">Choose the \n finish date</string>
    <string name="location_denied_prompt">Unable to show location — permission required</string>
    <string name="prompt_choose_dates">You need to choose both the start and the end date of your trip</string>
    <string name="prompt_fill_field">Fill in the field</string>
    <string name="prompt_invalid_dates">The start date cannot be after the end date</string>
    <string name="prompt_chosen_dates_from_past">Chosen dates cannot come from the past</string>
    <string name="start_point">START POINT</string>
    <string name="end_point">END POINT</string>
    <string name="prompt_marker_what_to_do">What would you like to do with that marker?</string>
    <string name="confirm">Confirm</string>
    <string name="set_as_start_point">Set as start point</string>
    <string name="set_as_end_point">Set as end point</string>
    <string name="remove_it">Remove it from the map</string>
    <string name="start_and_end_point">START &amp; END POINT</string>
    <string name="prompt_is_trip_done">Have you finished planning your trip?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="prompt_cannot_data">Cannot load your trip data</string>
    <string name="error_missing_start_or_end_marker">You need to provide both start and finish point of your trip!</string>
    <string name="prompt_trip_added_successfully">Group trip was added successfully!</string>
    <string name="prompt_trip_edited_successfully">Group trip was edited successfully!</string>
    <string name="time_format">%1$dh %2$dmin</string>
    <string-array name="array_trip_points">
        <item>START POINT</item>
        <item>END POINT</item>
    </string-array>
    <string name="prompt_cancel_change">Changes canceled!</string>
    <string name="nothing_to_edit_prompt">Nothing to edit!</string>
    <string name="current_password_prompt">Current password</string>
    <string name="current_password_message">To make changes enter your current password:</string>
    <string name="CURRENT_PASSWORD">CURRENT_PASSWORD</string>
    <string name="bad_password_prompt">Bad password!</string>
    <string name="changed_data_error">Something went wrong!</string>
    <string name="data_changed_prompt">Data changed!</string>
    <string name="new_group_trip">New group trip</string>
    <string name="create_new_trip">Create new trip</string>
    <string name="you_host">You host</string>
    <string name="you_participate">You participate</string>
    <string name="start_new_trip">Start new trip</string>
    <string name="set_as_start_and_end_point">Set as start and end point</string>
    <string name="join_trip">Join trip</string>
    <string name="prompt_guide_map_marker_options">Click on the marker to remove it or set as start/finish point of your trip</string>
    <string name="prompt_guide_map_start">Click longer on the map to add new point of your trip</string>
    <string name="prompt_unable_to_load_tripinfo">Cannot load trip info!</string>
    <string name="trip_description">Trip description</string>
    <string name="who_goes_wtih_you">Who participates with you?</string>
    <string name="prompt_see_desc">See trip description</string>
    <string name="no_photos">There are no saved photos for this trip</string>
    <string name="cancel_option">Cancel</string>
    <string name="name_info">Name</string>
    <string name="email_info">email</string>
    <string name="your_results_info">Your Results</string>
    <string name="numb_private_trips_info">Number of private trips:</string>
    <string name="default_0">0</string>
    <string name="numb_group_trips_info">Number of group trips:</string>
    <string name="numb_created_group_trips_info">Number of created group trips:</string>
    <string name="total_kilometers_info">Total kilometers:</string>
    <string name="total_time_info">Total time [min]:</string>
    <string name="not_sharing">Not sharing.</string>
    <string name="clipboard_invite_description">BCycle Trip Code</string>
    <string name="clipboard_share_description">BCycle Trip Sharing URL</string>
    <string name="share_intent_title">Share Trip URL</string>
    <string name="share_invite_intent_title">Share Trip Invite</string>
    <string name="share_this_trip">Share this trip</string>
    <string name="sharing_explanation_without_photos">If sharing is enabled, the route and details will be visible on a web page. You can share the link to this webpage with your friends.</string>
    <string name="sharing_explanation_without_photos_group">If sharing is enabled, the route and details, and any photos by other participants, will be visible on a web page. You can share the link to this webpage with your friends.</string>
    <string name="share_link_btn">Share</string>
    <string name="copy_link_btn">Copy Link</string>
    <string name="done">Done</string>
    <string name="please_wait">Please wait…</string>
    <string name="invite_dialog_title">Invite participants</string>
    <string name="invite_dialog_explanation">To invite someone to participate in this trip, give them this code. They can join this trip by selecting “Join group trip” from the main menu and typing the code. Participants must be approved by the trip host.</string>
    <string name="share_code_btn">Share</string>
    <string name="copy_code_btn">Copy Code</string>
    <string name="share_invite_text">Join my group trip %1$s on BCycle! Use this code to join: %2$s</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="select_group_trip_to_join">You have group trips that are starting soon. Do you want your trip to be counted as part of a group trip, or are you riding on your own?</string>
    <string name="private_trip_option">This is a private trip</string>
    <string name="start_trip_past_date">This trip’s start date is in the past. Are you sure you want to start this trip?</string>
    <string name="start_trip_future_date">This trip’s start date is in the future. Are you sure you want to start this trip?</string>
    <string name="join_group_trip_heading">To join a group trip, you must provide a trip code.</string>
    <string name="join_group_trip_description">A trip code is 6 characters long. A trip host or participant can view the code on the trip information page. Your request to join the trip will have to be approved by the trip’s host first. The host will see your name and avatar.</string>
    <string name="trip_code_hint">Trip Code</string>
    <string name="change_password">Change password</string>
    <string name="change_data">Change data</string>
    <string name="save_changes">SAVE CHANGES</string>
</resources>