<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/main_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_join_group_trip"
            android:icon="@drawable/ic_directions_bike"
            android:title="@string/menu_join_group_trip" />
        <item
            android:id="@+id/nav_create_group_trip"
            android:icon="@drawable/ic_group_add"
            android:title="@string/menu_create_group_trip" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/account_group"
        >

            <item
                android:id="@+id/nav_my_account"
                android:icon="@drawable/ic_person_outline"
                android:title="@string/menu_my_account" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />

            <item

                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />


    </group>
</menu>
