<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pl.pwr.zpi.bcycle.mobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_join_group_trip"
        android:name="pl.pwr.zpi.bcycle.mobile.ui.gallery.GalleryFragment"
        android:label="@string/menu_join_group_trip"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_create_group_trip"
        android:name="pl.pwr.zpi.bcycle.mobile.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_create_group_trip"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="pl.pwr.zpi.bcycle.mobile.ui.tools.ToolsFragment"
        android:label="@string/menu_my_account"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="pl.pwr.zpi.bcycle.mobile.ui.share.ShareFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="pl.pwr.zpi.bcycle.mobile.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>